(add new changes on top of this file)

Änderungen
----------

v0.12.2 (??.02.2013)
 * Bugfix for MSSQL-Database-Access.  Thanks to Michael Wagner!
 * Cache-API extended for TYPO3 6.0! Once again...
 * PageBrowser fixed for TYPO3 6.0

v0.12.1 (29.11.2012)
 * Log sql errors for Select-Statements.
 * New method util_Debug::getDebugTrail(). Used for TYPO3 4.7 compatibility. Thanks to Hannes Bochmann!

v0.12.0 (05.10.2012) (not released)
 * Full support for MSSQL database access. Thanks to Michael Wagner!
 * New non verbose unhandled exception output. Thanks to Hannes Bochmann!

v0.11.16 (13.09.2012)
 * tx_rnbase_util_DB: enablefieldsbe removes more fields like starttime, fe_group etc.

v0.11.14 (02.08.2012) (not released)
 * filter_Base. Always set SearchCallback. Thanks to Michael Wagner!
 * Small fix in SimpleMarker. Thanks to Thomas Reuleke!
 * FormTool::createSortLink() fixed if no params in url present. Thanks to Thomas Reuleke!
 * New compatibility-wrapper to send simple emails out of TYPO3.

v0.11.13 (11.06.2012) (not released)
 * Better check for valid TSFE
 * First git tagged version

v0.11.12 (15.05.2012) (not released)
 * INSERT and UPDATE support for external databases. Thanks to Michael Wagner!
 * constructor name of model_base changed to __construct
 * util_Misc::getPidList forces TSFE creation
 * Filtering passwords in exception mailings. Thanks to Hannes Bochmann!
 * Cookie information in error mails added.
 * It is possible to point pagebrowser to a specific item by parameter:
    $filter->handlePageBrowser($configurations,
      $confId.'news.pagebrowser', $viewData, $fields, $options, array(
        'searchcallback'=> array($srv, 'search'),
        'pbid' => 'mknews',
        'pointerFromItem' => array('field' => 'uid', 'param' => 'tt_news')
      )
    );
    Thanks to Michael Wagner!

v0.11.11 (21.02.2012) (not released)
 * tx_rnbase_parameters: new method init()